@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.6.2) unstable; urgency=low
 
   * lock: fixed race condition in debug flag updates
   * session: use rwlock for the session manager
+  * proxy-handler: pass request headers to the remote HTTP server
 
  --
 
